--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -158,8 +158,8 @@ a.button span {
 #download-tar-gz span {
   background: transparent url(../images/tar-gz-icon.png) 12px 50% no-repeat;
 }
-#view-on-github span {
-  background: transparent url(../images/octocat-icon.png) 12px 50% no-repeat;
+#view-on-resume span {
+  background: transparent url(../images/resume.png) 12px 50% no-repeat;
 }
 #view-on-github {
   margin-right: 0;
